# AIDev

./: .gitignore  README.md
backend/: .env.example  main.py  pyproject.toml  web_server.py
backend/api/: chat.py  documents.py  memory.py  sessions.py
backend/data/documents/: 员工手册.md  技术架构文档.md
backend/src/agent/: __init__.py  agent.py  memory.py  tools.py
backend/src/core/: settings.py
backend/src/ingestion/: chunker.py  loader.py
backend/src/retrieval/: bm25.py  hybrid_retriever.py  index_builder.py  rag_chain.py  reranker.py
backend/tests/: conftest.py  test_agent.py  test_index.py  test_rag.py  test_suite.py  test_tools.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/chat/: branch-indicator.tsx  chat-area.tsx  chat-input.tsx  copy-node-modal.tsx  message-bubble.tsx
frontend/src/components/sidebar/: document-panel.tsx  session-list.tsx  system-prompt.tsx
frontend/src/components/tree/: session-tree.tsx
frontend/src/lib/: AppContext.tsx  api.ts  types.ts
